--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- tools -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.1-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
