--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <version>4.1.44.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.caucho/hessian -->
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.60</version>
+        </dependency>
+
 
     </dependencies>
 
