--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>4.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.66</version>
+        </dependency>
+
         <!-- gRpc -->
         <dependency>
             <groupId>io.grpc</groupId>
