--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,16 @@
             <version>1.26.0</version>
         </dependency>
         <!-- gRpc -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>3.0.3</version>
+        </dependency>
 
 
     </dependencies>
